/**
 * Copyright (C) 2009-2013 Lightbend Inc. <http://www.lightbend.com>
 */

syntax = 'proto3';
option optimize_for = SPEED;

package Akka.Remote.Proto;

/******************************************
  ActorSelection related formats
*******************************************/

message SelectionEnvelope {
  bytes enclosedMessage = 1;	// required
  int32 serializerId = 2;       // required
  repeated Selection pattern = 3;
  bytes messageManifest = 4;
}

enum PatternType {
  PARENT = 0;
  CHILD_NAME = 1;
  CHILD_PATTERN = 2;
}

message Selection {
  PatternType type = 1;		// required
  string matcher = 2;
}